# terraguard

./: .checkov.yaml  .env.example  .gitignore  .trivyignore  LICENSE  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: baseline-capture.yml  dashboard-deploy.yml  demo-data-refresh.yml  security-regression.yml
ai/: __init__.py  _client.py  main_triage.py  pr_comment.py  remediation.py  sanitize.py  triage.py
ai/prompts/: remediation_system.txt  remediation_user.txt  triage_system.txt  triage_user.txt
autopr/: __init__.py  main.py  patch_generator.py  pr_creator.py
baseline/: latest.json
benchmarks/: cis_aws_v1_5.json  mapping.json  nist_800_53.json
demo/: generate_demo_data.py
docs/: index.html
docs/assets/css/: dashboard.css
docs/assets/js/: charts.js  dashboard.js  demo-mode.js
docs/data/: dashboard.json  demo.json  metrics.json
examples/terraform/: compute.tf  database.tf  iam.tf  logging.tf  networking.tf  providers.tf  storage.tf
metrics/: __init__.py  collector.py  main.py  publisher.py  schema.py
regression/: _helpers.py  conftest.py  test_compute.py  test_database.py  test_iam.py  test_logging.py  test_networking.py  test_secrets.py  test_storage.py
scanner/: __init__.py  baseline.py  benchmark_map.py  check_gate.py  checkov_runner.py  config.py  hcl_blocks.py  main.py  models.py  plan_parser.py  tfsec_runner.py  trivy_runner.py
tests/unit/: test_baseline_diff.py  test_metrics.py  test_models.py  test_parsers.py  test_sanitize_and_patch.py
