[project]
name = "terraguard"
version = "0.1.0"
description = "End-to-end Terraform AWS security regression pipeline with AI triage and auto-remediation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Pragati Gupta" }]
dependencies = [
    "pydantic>=2.6",
    "python-hcl2>=4.3.5",
    "anthropic>=0.40.0",
    "PyGithub>=2.3.0",
    "structlog>=24.1.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-json-report>=1.5.0",
    "pytest-cov>=5.0",
    "black>=24.3",
    "isort>=5.13",
    "checkov>=3.2",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["scanner", "ai", "autopr", "metrics"]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.pytest.ini_options]
markers = [
    "critical: blocks PR merge",
    "high: warns but does not block",
    "medium: informational",
    "unit: fast unit tests for scanner/ai modules",
]
addopts = [
    "-v",
    "--tb=short",
]
testpaths = ["regression", "tests"]
